fix x overflow on projects section

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -212,6 +212,7 @@ footer {
 /* projects */
 .projects {
   min-height: 70vh;
+  overflow-x: hidden;
 }
 .projects-title {
   font-size: 2rem;
